# pica

./: Cargo.toml  README.md  idea.md
.github/workflows/: openwrt-rust-binaries.yml
builds/base/v0.0.0/nano/: amd64.build
crates/: README.md
crates/pica-cli-rs/: Cargo.toml
crates/pica-cli-rs/src/: helpers.rs  main.rs  state.rs  types.rs
crates/pica-cli-rs/src/commands/: install.rs  remove.rs  sync.rs
crates/pica-core/: Cargo.toml
crates/pica-core/src/: lib.rs  repo.rs
crates/pica-pack-rs/: Cargo.toml
crates/pica-pack-rs/src/: main.rs
crates/pica-pkg-cli/: Cargo.toml
crates/pica-pkg-cli/src/: helpers.rs  lock.rs  main.rs  state.rs  system.rs  types.rs
crates/pica-pkg-cli/src/commands/: install.rs  query.rs  remove.rs  sync.rs  upgrade.rs
crates/pica-pkg-core/: Cargo.toml
crates/pica-pkg-core/src/: error.rs  io.rs  lib.rs  manifest.rs  repo.rs  selector.rs  version.rs
crates/pica-pkg-pack/: Cargo.toml
crates/pica-pkg-pack/src/: main.rs
docs/: developer.md  standard.md
legacy/pica-cli/: pica
legacy/pica-pack/: pica-pack
legacy/pica-pack/example/hello/: manifest
pica-cli/: pica
pica-pack/: pica-pack
pica-pack/example-app/hello/: manifest
pica-pack/example/hello/: manifest
pica-rs/crates/pica-cli-rs/: Cargo.toml
pica-rs/crates/pica-cli-rs/src/: main.rs  state.rs
pica-rs/crates/pica-cli-rs/src/commands/: install.rs  query.rs  remove.rs
pica-rs/crates/pica-core/: Cargo.toml
pica-rs/crates/pica-core/src/: lib.rs  repo.rs
pica-rs/crates/pica-pack-rs/: Cargo.toml
src/: cathelper  catwrt-mirrors  cpm-import  cpm-restore
