[workspace]
members = [
  "crates/pica-pkg-core",
  "crates/pica-pkg-cli",
  "crates/pica-pkg-pack",
]
resolver = "2"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# pedantic 中太严格的规则，按需放行
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_precision_loss = "allow"
similar_names = "allow"
too_many_lines = "allow"
return_self_not_must_use = "allow"
items_after_statements = "allow"
unnecessary_wraps = "allow"
needless_pass_by_value = "allow"
wildcard_imports = "allow"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
